@@ -129,13 +129,16 @@ RELEASE 3.1.0.alpha.yyyymmdd - NEW DATE WILL BE INSERTED HERE
        - Document and comment cleanup.
        - Added new Environment Value X_RPM_EXTRADEFS to supply custom settings
          to the specfile without adding specific logic for each one to scons.
-    - One swig test now checks for Python.h instead of failing
+    - The test for Python.h needed by swig tests is moved to get_python_platform
+      so it does not have to be repeated in every test; picks up one failure
+      which did not make the (previously needed) check.
     - If test opens os.devnull, register with atexit so file opens do not leak.
     - Fix bugs in Win32 process spawn logic to handle OSError exception correctly.
     - Use time.perf_counter instead of time.clock if it exists.
       time.clock deprecated since py3.3, due to remove in 3.8. deprecation
       warnings from py3.7 were failing a bunch of tests on Windows since they
       mess up expected stderr.
+    - tar packaging test fixups
     
   From Hao Wu
     - typo in customized decider example in user guide 
